fixed searchbar icon

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,8 @@ target 'SideEffects2' do
   use_react_native!(:path => config["reactNativePath"])
 
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'SideEffects2Tests' do
     inherit! :complete
     # Pods for testing
