--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,53 +1,3 @@
-require_relative '../node_modules/react-native/scripts/react_native_pods'
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+Zhè jiāng shì nín shìyè de liánghǎo kāiduān
 
-platform :ios, '10.0'
-
-target 'SideEffects2' do
-  config = use_native_modules!
-
-  use_react_native!(:path => config["reactNativePath"])
-
-
-
-  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
-
-  target 'SideEffects2Tests' do
-    inherit! :complete
-    # Pods for testing
-  end
-
-  # Enables Flipper.
-  #
-  # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable these next few lines.
-  use_flipper!
-  post_install do |installer|
-    flipper_post_install(installer)
-    installer.pods_project.targets.each do |target|
-
-      # The following is needed to ensure the "archive" step works in XCode.
-      # It removes React & Yoga from the Pods project, as it is already included in the main project.
-      # Without this, you'd see errors when you archive like:
-      # "Multiple commands produce ... libReact.a"
-      # "Multiple commands produce ... libyoga.a"
-
-      targets_to_ignore = %w(React yoga)
-      
-      if targets_to_ignore.include? target.name
-        target.remove_from_project
-      end
-
-    end
-
-  end
-end
-
-target 'SideEffects2-tvOS' do
-  # Pods for SideEffects2-tvOS
-
-  target 'SideEffects2-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
-end
+wǒ háishì duì zhōngguó chuántǒng gē bù liǎojiě
