--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+	release {
+            storeFile file('SideEffects2Release.keystore')
+            storePassword 'SideEffects2'
+            keyAlias 'SideEffects2'
+            keyPassword 'SideEffects2'
+        }
     }
     buildTypes {
         debug {
@@ -158,9 +164,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
-            minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
 
